2011-06-15  Ian Beckwith  <ianb@erislabs.net>

	* scitopia, worldwidescience: fixed URLs.

2011-06-14  Ian Beckwith  <ianb@erislabs.net>

	* musicbrainz, codesearch, rpmsearch: Fixed URLs, options and
	  tests. The sites have all changed significantly which means
	  both new options and no-longer-supported options.
	  codesearch has gone all ajaxy, so I've implemented the options
	  via the search string, e.g. adding " package:foo".
	  Disabled codesearch.test, as it now needs javascript.
	  Codesearch on both google.com and google.co.uk was acting up,
	  so I've pointed it at google.fr.
	* Removed filesearching elvi, it now requires a 'Referer:' header
	  to work. There is no browser-portable way to specify a
	  'Refer[r]er:' header, plus we should probably take it as a hint.
	* Tweaked debian packaging.
	* Updated NEWS.

2011-06-13  Ian Beckwith  <ianb@erislabs.net>

	* w3link: fixed URLs.

2011-06-10  Ian Beckwith  <ianb@erislabs.net>

	* Fixed ctan.
	  Option -doc has been replaced by -id.
	  Options are no longer mutually exclusive,
	  you can now do (eg) ctan -d -i -n texlive.

2011-06-09  Ian Beckwith  <ianb@erislabs.net>

	* fixed tests: debwiki, ntrs, wayback.

2011-06-07  Ian Beckwith  <ianb@erislabs.net>

	* Default to surfraw_graphical_remote=no,
	  as chromium doesn't support "-remote openURL".

2011-05-31  Jason Ryan  <jasonwryan@gmail.com>

	* Add options to archpkg.

2011-05-12  Sara Fauzia  <sara@archlinux.us>

	* Fix archpkg URL.

2011-05-12  Ian Beckwith  <ianb@erislabs.net>

	* surfraw.IN:
	  + if elvi doesn't exist, send usage to stderr not stdout.
	  + bookmark names: do exact match not substring match.
	* Added tests for archwiki, deli & stack.
	* README:
	  + added INTEGRATION section on uzbl and pentadactyl.
	  + upcased section headings for clarity.

2011-05-12  Jason Ryan  <jasonwryan@gmail.com>

	* New elvi:
	  + archwiki: search the arch wiki.
	  + deli: search delicious.com.
	  + stack: search stackoverflow.com and friends.
