@@ -1,16 +1,0 @@
-# $Id$
-
-%: %.IN
-	-rm -f $@ $@.tmp
-	sed -e 's,@bindir\@,${bindir},g; '\
-	    -e 's,@mandir\@,${mandir},g; '\
-	    -e 's,@VERSION\@,${VERSION},g; '\
-	    -e 's,@prefix\@,${prefix},g; '\
-	    -e 's,@ELVIDIR\@,${ELVIDIR},g; '\
-	    -e 's,@AWK\@,${AWK},g; '\
-	    -e 's,@TEXTBROWSER\@,${TEXTBROWSER},g; '\
-	    -e 's,@GRAPHICALBROWSER\@,${GRAPHICALBROWSER},g; '\
-	    -e 's,@sysconfdir\@,${sysconfdir},g' $< >$@.tmp
-	chmod +x $@.tmp
-	mv $@.tmp $@
-
